[workspace]
members = ["example-simple", "sljit-sys"]

[package]
name = "sljit"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sljit-sys = { version = "0.1.0", path = "sljit-sys" }

[features]
default = []
arch-i386 = ["sljit-sys/arch-i386"]
arch-x86_64 = ["sljit-sys/arch-x86_64"]
arch-armv6 = ["sljit-sys/arch-armv6"]
arch-armv7 = ["sljit-sys/arch-armv7"]
arch-arm-thumb-2 = ["sljit-sys/arch-arm-thumb-2"]
arch-arm64 = ["sljit-sys/arch-arm64"]
arch-ppc32 = ["sljit-sys/arch-ppc32"]
arch-ppc64 = ["sljit-sys/arch-ppc64"]
arch-mips32 = ["sljit-sys/arch-mips32"]
arch-mips64 = ["sljit-sys/arch-mips64"]
arch-rv32 = ["sljit-sys/arch-rv32"]
arch-rv64 = ["sljit-sys/arch-rv64"]
arch-s390x = ["sljit-sys/arch-s390x"]
arch-loongarch64 = ["sljit-sys/arch-loongarch64"]

