[workspace]
members = ["example-simple", "sljit-sys"]

[workspace.package]
authors = ["Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"]
repository = "https://github.com/stevefan1999-personal/sljit-rs"
keywords = ["jit"]
version = "0.1.5"

[workspace.dependencies]
sljit-sys = { version = "0.1.5", path = "sljit-sys" }

[package]
name = "sljit"
version.workspace = true
edition = "2021"
license-file = "LICENSE"
description = "Placeholder package for sljit high-level bindings"
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sljit-sys.workspace = true

[features]
default = ["arch-host"]
arch-i386 = ["sljit-sys/arch-i386"]
arch-x86_64 = ["sljit-sys/arch-x86_64"]
arch-armv6 = ["sljit-sys/arch-armv6"]
arch-armv7 = ["sljit-sys/arch-armv7"]
arch-arm-thumb-2 = ["sljit-sys/arch-arm-thumb-2"]
arch-arm64 = ["sljit-sys/arch-arm64"]
arch-ppc32 = ["sljit-sys/arch-ppc32"]
arch-ppc64 = ["sljit-sys/arch-ppc64"]
arch-mips32 = ["sljit-sys/arch-mips32"]
arch-mips64 = ["sljit-sys/arch-mips64"]
arch-rv32 = ["sljit-sys/arch-rv32"]
arch-rv64 = ["sljit-sys/arch-rv64"]
arch-s390x = ["sljit-sys/arch-s390x"]
arch-loongarch64 = ["sljit-sys/arch-loongarch64"]
arch-host = ["sljit-sys/arch-host"]

[package.metadata.docs.rs]
rustc-args = [ "--cfg" , "docsrs_priv"]