[workspace]
members = ["example-simple", "example-bf", "sljit-sys", "example-wasm"]

[workspace.package]
authors = ["Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"]
edition = "2024"
keywords = ["jit"]
repository = "https://github.com/stevefan1999-personal/sljit-rs"
version = "0.4.0"

[workspace.dependencies]
sljit-sys = { version = "0.4.0", path = "sljit-sys", default-features = false }

[package]
name = "sljit"
authors.workspace = true
description = "Placeholder package for sljit high-level bindings"
edition = "2024"
keywords.workspace = true
license-file = "LICENSE"
repository.workspace = true
version.workspace = true

[dependencies]
sljit-sys.workspace = true

[dev-dependencies]
crunchy = "0.2.4"

[features]
default = ["arch-host", "bindgen"]
arch-i386 = ["sljit-sys/arch-i386"]
arch-x86_64 = ["sljit-sys/arch-x86_64"]
arch-armv6 = ["sljit-sys/arch-armv6"]
arch-armv7 = ["sljit-sys/arch-armv7"]
arch-arm-thumb-2 = ["sljit-sys/arch-arm-thumb-2"]
arch-arm64 = ["sljit-sys/arch-arm64"]
arch-ppc32 = ["sljit-sys/arch-ppc32"]
arch-ppc64 = ["sljit-sys/arch-ppc64"]
arch-mips32 = ["sljit-sys/arch-mips32"]
arch-mips64 = ["sljit-sys/arch-mips64"]
arch-rv32 = ["sljit-sys/arch-rv32"]
arch-rv64 = ["sljit-sys/arch-rv64"]
arch-s390x = ["sljit-sys/arch-s390x"]
arch-loongarch64 = ["sljit-sys/arch-loongarch64"]
arch-host = ["sljit-sys/arch-host"]
docs = ["sljit-sys/docs"]
bindgen = ["sljit-sys/bindgen"]
force-debug = ["sljit-sys/force-debug"]
force-verbose = ["sljit-sys/force-verbose"]

[package.metadata.docs.rs]
features = ["docs"]
