[package]
name = "example-bf"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sljit = { version = "*", path = "..", features = ["bindgen"] }
libc = "0.2"

