[package]
name = "example-wasm"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
wasmparser = "0.244.0"
sljit = { path = ".." }
wat = { version = "1.242.0", default-features = false }

[dev-dependencies]
crunchy = "0.2.4"
