[package]
name = "sljit-sys"
version.workspace = true
edition = "2021"
license-file = "sljit/LICENSE"
description = "System crate for sljit using bindgen and ast-grep"
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
const-default = { version = "1.0.0", features = ["derive"] }
derive_more = "0.99.17"

[build-dependencies]
ast-grep = { version = "0.17.0", optional = true }
bindgen = { version = "0.69.1", features = ["experimental"], optional = true }
cc = "1.0.83"
gag = { version = "1.0.0", optional = true }
handlebars = { version = "5.0.0", optional = true }
miette = "5.10.0"
serde = { version = "1.0.195", features = ["derive"], optional = true }
serde_json = { version = "1.0.111", optional = true }
static_assertions = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }

[features]
default = ["arch-host"]
arch-i386 = []
arch-x86_64 = []
arch-armv6 = []
arch-armv7 = []
arch-arm-thumb-2 = []
arch-arm64 = []
arch-ppc32 = []
arch-ppc64 = []
arch-mips32 = []
arch-mips64 = []
arch-rv32 = []
arch-rv64 = []
arch-s390x = []
arch-loongarch64 = []
arch-host = []
docs = []
bindgen = ["dep:bindgen", "dep:ast-grep", "dep:gag", "dep:handlebars", "dep:serde", "dep:serde_json"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_priv"]
features = ["docs"]
