[package]
name = "sljit-sys"
version.workspace = true
edition = "2024"
license-file = "sljit/LICENSE"
description = "System crate for sljit using bindgen and ast-grep"
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
const-default = { version = "1.0.0", features = ["derive"] }
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
typed-builder = "0.21.0"

[build-dependencies]
ast-grep = { version = "0.38.5", optional = true }
bindgen = { version = "0.72.0", features = ["experimental"], optional = true }
cc = "1.2.26"
cmd_lib = { version = "1.9.5", optional = true }
gag = { version = "1.0.0", optional = true }
handlebars = { version = "6.3.2", optional = true }
miette = "7.6.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }

[features]
default = ["arch-host"]
arch-i386 = []
arch-x86_64 = []
arch-armv6 = []
arch-armv7 = []
arch-arm-thumb-2 = []
arch-arm64 = []
arch-ppc32 = []
arch-ppc64 = []
arch-mips32 = []
arch-mips64 = []
arch-rv32 = []
arch-rv64 = []
arch-s390x = []
arch-loongarch64 = []
arch-host = []
docs = []
bindgen = ["dep:bindgen", "dep:ast-grep", "dep:gag", "dep:handlebars", "dep:serde", "dep:serde_json", "dep:cmd_lib"]

[package.metadata.docs.rs]
features = ["docs"]
